# KVShuttle

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
experiments/configs/: bandwidth_sweep.yaml  compression_sweep.yaml  full_benchmark.yaml  generation_quality.yaml  generation_quality_torch.yaml  generation_quality_torch_70b.yaml  generation_quality_torch_7b.yaml  generation_quality_torch_llama.yaml  generation_quality_torch_llama32.yaml  generation_quality_torch_missing7.yaml  generation_quality_torch_smoke.yaml  model_sweep.yaml  model_sweep_full14.yaml  real_kv_sweep.yaml  router_training.yaml  smoke_test.yaml
experiments/notebooks/: exp1_llama32_genquality.ipynb  exp3_missing7_genquality.ipynb  exp4_70b_genquality.ipynb  generation_quality_colab.ipynb  gpu_calibration.ipynb  gpu_calibration_results_a100.json  gpu_calibration_results_t4.json  smoke_test_torch_colab.ipynb
experiments/results/: confidence_intervals.json
experiments/scripts/: calibrate_gpu.py  compute_confidence_intervals.py  demo_vllm_integration.py  generate_paper_figures.py  generate_paper_tables.py  integrate_gpu_calibration.py  merge_all_results.py  merge_fp16_results.py  merge_fp16_results_v2.py  regenerate_paper.sh  run_experiment.py  run_model_sweep_full14.sh  smoke_test_torch.py  (+2 more)
kvshuttle/: __init__.py  datasets.py
tests/: conftest.py  test_advanced_compressors.py  test_compressors.py  test_datasets.py  test_evaluation.py  test_kv_injector.py  test_pipeline.py  test_quality_visualization.py  test_real_transfer.py  test_router.py  test_vllm_adapter.py
(+88 files in other folders)
